# jatko

./: README.md  jatko.cabal  out.js
app/: Main.hs
examples/: test.jtk
src/: Core.hs  Jatko.hs
src/Jatko/: Compiler.hs  Core.hs  Pretty.hs  Syntax.hs  TypeCheck.hs
src/Jatko/Syntax/: Offside.hs
