name:                jatko
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/fumieval/jatko#readme
license:             BSD3
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          fumiexcel@gmail.com
copyright:           Copyright (c) 2017 Fumiaki Kinoshita
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Core
  build-depends:       base >= 4.7 && < 5, mtl, containers, free, comonad
  ghc-options: -Wall
  default-language:    Haskell2010

executable jatko-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , jatko
  default-language:    Haskell2010

test-suite jatko-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , jatko
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fumieval/jatko
